# 20054461_20054465-YoctoProject_CW

./: .gitattributes  README.md  README.txt
20054461_20054465_EOS-CW-Submission/ProgramFiles/: CMakeLists.txt  main.c
20054461_20054465_EOS-CW-Submission/YoctoFiles/meta-custom-image-mods/conf/: layer.conf
20054461_20054465_EOS-CW-Submission/YoctoFiles/meta-custom-image-mods/recipes-core/u-boot-fix/: u-boot_2024.04.bbappend
Image/: core-image-base-raspberrypi5-20241210160117.sdimg
ProgramFiles/: libmod_demo
YoctoFiles/: custom-image-mods.yml  raspberrypi5.yml
YoctoFiles/meta-custom-image-mods/recipes-core/network-configuration-add/: network-configuration-add.bb
YoctoFiles/meta-custom-image-mods/recipes-core/network-configuration-add/files/: 10-eth0.network  wpa_supplicant.conf
YoctoFiles/meta-custom-image-mods/recipes-core/temp-monitor-program/: temp-monitor-program_1-0.bb
YoctoFiles/meta-custom-image-mods/recipes-core/u-boot-fix/files/: add-autoboot-keyed.patch
